--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 <title>HTML Tutorial</title>
 <body>
 
-<h1>This is a heading</h1>
-<p>This is a paragraph.</p>
-
-
+<img src="01 copy.jpg" alt="my image" width="100px" height="100px"/>
+<ul>
+    <li>
+        <a href="HomePage.html">Home Page</a>
+        <a href="HomePage.html">About Me</a>
+        <a href="HomePage.html">Home Page</a>
+        <a href="HomePage.html">Home Page</a>
+    </li>
+</ul>
 </body>
 </html>
