--- a/index.html
+++ b/index.html
@@ -22,5 +22,11 @@
     
 </ul>
 
+<footer>
+    <a href="https://validator.w3.org/nu/?doc=https://elias-teshome.github.io/wap/">
+        <img src="https://manalabs.org/img/w3c-html.png" />
+       </a>
+</footer>
+
 </body>
 </html>
