--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>HTML Tutorial</title>
 <body>
 
-<img src="01 copy.jpg" alt="my image" width="100px" height="100px"/>
+<img src="my.jpg" alt="my image" style="width:100px;height:100px;"/>
 <ul>
     <li>
         <a href="HomePage.html">Home Page</a>
