--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
        </a>
 
 
-       <footer style="background-color: black; padding: 5px; border-radius: 20px;">
+       <footer style="background-color: gray; padding: 5px; border-radius: 20px;">
         <ul style="list-style: none; color: white;">
             <li>Name: Elias Teshome</li>
             <li>Email: eteshome@miu.edu</li>
