--- a/index.html
+++ b/index.html
@@ -1,15 +1,30 @@
 <!DOCTYPE html>
 <html>
-<title>HTML Tutorial</title>
-<body>
+    <head>
+        <title>HTML Tutorial</title>
 
-<img src="my.jpg" alt="my image" style="width:100px;height:100px;"/>
+    </head>
+    <style>
+        #photo-section{
+         text-align: center;
+        }
+    </style>
+
+<body>
+    <section id="photo-section">
+        <h1>Photo</h1>
+        <img src="my.jpg" alt="Elias Teshome photo">
+        <br>
+        <p>Elias Teshome</p>
+    </section>
+
+
 <ul>
     <li>
         <a href="HomePage.html">Home Page</a>
     </li>
         <li>
-            <a href="HomePage.html">About Me</a>
+            <a href="AboutMe.html">About Me</a>
         </li>
         <li>
             <a href="HomePage.html">About Me</a>
