--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <style>
         #photo-section{
          text-align: center;
+         width: 200px;
+         height: 200px;
         }
     </style>
 
