--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
          width: 100px;
          height: 100px;
         }
+        #labs{
+            width: max-content;
+            margin: 0 auto;
+        }
     </style>
 
 <body>
@@ -21,7 +25,7 @@
     </section>
 
 
-    <section id="labs-section">
+    <section id="labs">
         <h1 style="text-align: center;">Lab assignments</h1>
         <ul>
             <li><a href="lab2/aboutme.html">Home Page</a></li>
