--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
 
     </head>
     <style>
-        #photo-section{
-         text-align: center;
-         
-        }
+       
         #labs{
             width: max-content;
             margin: 0 auto;
@@ -18,7 +15,7 @@
 <body>
     <section id="photo-section">
         <h1>Photo</h1>
-        <img src="my.jpg" alt="Elias Teshome photo">
+        <img src="my.jpg" alt="Elias Teshome photo" style="width:100px;height:100px;">
         <br>
         <p>Elias Teshome</p>
     </section>
