--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
     </head>
     <style>
        
-        #labs{
-            width: max-content;
-            margin: 0 auto;
-        }
+        
     </style>
 
 <body>
@@ -22,7 +19,7 @@
 
 
     <section id="labs">
-        <h1 style="text-align: center;">Lab assignments</h1>
+        <h1 style="text-align: left;">Lab assignments</h1>
         <ul>
             <li><a href="lab2/aboutme.html">Home Page</a></li>
             <li><a href="lab2/aboutme.html">About me</a></li>
