--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 
     <section id="labs">
-        <h1 style="text-align: left;">Lab assignments</h1>
+        <h1>Lab assignments</h1>
         <ul>
             <li><a href="lab2/aboutme.html">Home Page</a></li>
             <li><a href="lab2/aboutme.html">About me</a></li>
