--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <section id="labs">
         <h1>Lab assignments</h1>
         <ul>
-            <li><a href="lab2/aboutme.html">Home Page</a></li>
+            <li><a href="index.html">Home Page</a></li>
             <li><a href="lab2/aboutme.html">About me</a></li>
             <li><a href="lab2/aboutme.html">Recipt</a></li>
             <li><a href="lab2/aboutme.html">Movie Review</a></li>
@@ -29,7 +29,7 @@
     </section>
 
     <a href="https://validator.w3.org/nu/?doc=https://elias-teshome.github.io/wap/">
-        <img src="https://manalabs.org/img/w3c-html.png" />
+        <img src="https://manalabs.org/img/w3c-html.png" alt="validator"/>
        </a>
 
 
