--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h1>Lab assignments</h1>
         <ul>
             <li><a href="index.html">Home Page</a></li>
-            <li><a href="lab2/aboutme.html">About me</a></li>
+            <li><a href="lab2/Aboutme.html">About me</a></li>
             <li><a href="lab2/aboutme.html">Recipt</a></li>
             <li><a href="lab2/aboutme.html">Movie Review</a></li>
             <li><a href="lab2/aboutme.html">MP3 library</a></li>
