--- a/index.html
+++ b/index.html
@@ -3,10 +3,17 @@
     <head>
         <title>HTML Tutorial</title>
 
+        <style>
+            #fo{
+                background-color: gray;
+                padding: 5px;
+                border-radius: 20px;
+            }
+            </style>
     </head>
- 
 
-<body>
+
+<body style="background-color: bisque;">
     <section id="photo-section">
         <h1>Photo</h1>
         <img src="my.jpg" alt="Elias Teshome photo" style="width:100px;height:100px;">
@@ -33,7 +40,7 @@
        </a>
 
 
-       <footer style="background-color: gray; padding: 5px; border-radius: 20px;">
+       <footer  id ="fo"> 
         <ul style="list-style: none; color: white;">
             <li>Name: Elias Teshome</li>
             <li>Email: eteshome@miu.edu</li>
