--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <ul>
             <li><a href="index.html">Home Page</a></li>
             <li><a href="lab2/Aboutme.html">About me</a></li>
-            <li><a href="lab2/aboutme.html">Recipt</a></li>
+            <li><a href="recipe/pie.html">Recipt</a></li>
             <li><a href="lab2/aboutme.html">Movie Review</a></li>
             <li><a href="lab2/aboutme.html">MP3 library</a></li>
             <li><a href="lab2/aboutme.html">Movie review PHP</a></li>
@@ -37,7 +37,7 @@
 
     <a href="https://validator.w3.org/nu/?doc=https://elias-teshome.github.io/wap/">
         <img src="https://manalabs.org/img/w3c-html.png" alt="validator"/>
-       </a>
+    </a>
 
 
        <footer  id ="fo"> 
