--- a/recipe/pie.html
+++ b/recipe/pie.html
@@ -37,7 +37,7 @@
         <li>4 egg yolks, beaten</li>
         <li>1 (9 inch) pie crust, baked</li>
         <li>4 egg whites</li>
-        <li>6 tbsp white sugar</li>
+        <li>6 <abbr title="tablespoons"> tbsp</abbr> white sugar</li>
     </ul>
   </div>
 
