--- a/recipe/pie.html
+++ b/recipe/pie.html
@@ -42,7 +42,7 @@
   </div>
 
   <div class="thirdpart">
-    <h1 id="direction" ><u>DIRECTIONS></u></h1>
+    <h1 id="direction" >DIRECTIONS</h1>
     <ol>
        <li><strong>Preheat Oven</strong> Preheat oven to 350 degrees F (175 degrees C).</li>
 
