--- a/lab2/Aboutme.html
+++ b/lab2/Aboutme.html
@@ -1,29 +1,53 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html> 
+<html lang="en-us">
     <head>
-        <title>HTML Tutorial</title>
-
+        <meta charset="utf-8">
+        <title>about Elias Teshome</title>
+        <link href="aboutme.css" rel="stylesheet">
     </head>
- 
+    <body>
+        <section>
+            <p id="title">About Elias Tehsome</p>
+            <p>my name is elias teshome and i am form ethiopia </p>
+            <hr/>
+        </section>
+        <section>
+            <h1>Class I took</h1>
+            <ol>
+                <li>Enterprise Arcitecture</li>
+                <li>Algorithms</li>
+                
+            </ol>
+            <h1>Classes I am going to take</h1>
+            <ol>
+                <li>Modern Web Application</li>
+                <li>Web Application</li>
+            </ol>
+        </section>
+        <section>
+            <h1>My <b>favourite</b> Movies</h1>
+            <ul class="movies-list">
+                <li>Game of Throne (<a href="https://www.imdb.com/title/tt0944947/?ref_=fn_al_tt_1">imdb</a>)</li>
+                <li> see (<a href="https://www.imdb.com/title/tt7949218/?ref_=nv_sr_srsg_0">imdb</a>)</li>
+                <li> vikings (<a href="https://www.imdb.com/title/tt2306299/?ref_=nv_sr_srsg_0">imdb</a>)</li>
+            </ul>
+        </section>
+        <section>
+            <h1>My Mood</h1>
+            <p>happy:<img id="img1" src="image/images.jpeg" alt="happy"> sad:<img id="img2" src="image/imagesad.jpeg" alt="sad"></p>
+        </section>
+        <section>
+            <h1>About my neighbours</h1>
+            <p>Samueal is my neighbour and he is a good guy.</p>
+        </section>
+        <section id="validator">
+            <a href="https://validator.w3.org/nu/?doc=https://elias-teshome.github.io/wap/">
+                <img src="https://manalabs.org/img/w3c-html.png" alt="html validator"/>
+            </a>
 
-<body>
-  
-
-
-    
-
-    <a href="https://validator.w3.org/nu/?doc=https://elias-teshome.github.io/wap/">
-        <img src="https://manalabs.org/img/w3c-html.png" alt="validator"/>
-       </a>
-
-
-       <footer style="background-color: gray; padding: 5px; border-radius: 20px;">
-        <ul style="list-style: none; color: white;">
-            <li>Name: Elias Teshome</li>
-            <li>Email: eteshome@miu.edu</li>
-            <li>phone: +1 641 451 9137</li>
-        </ul>
-    </footer>
-
-</body>
+            <a href=" http://jigsaw.w3.org/css-validator/validator?uri=https://elias-teshome.github.io/wap/">
+                <img src="https://manalabs.org/img/w3c-css.png" alt="css validator"/>
+            </a>
+        </section>
+    </body>
 </html>
