--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <li><a href="lab2/Aboutme.html">About me</a></li>
             <li><a href="w1d2recipe/pie.html">Recipt</a></li>
             <li><a href="w1d3MovieReview/tmnt.html">Movie Review</a></li>
-            <li><a href="lab2/aboutme.html">MP3 library</a></li>
+            <li><a href="w1d4flexandgrid/flex.html">flex and grid</a></li>
             <li><a href="lab2/aboutme.html">Movie review PHP</a></li>
             
         </ul>            
