basic java script

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <li><a href="w1d2recipe/pie.html">Recipt</a></li>
             <li><a href="w1d3MovieReview/tmnt.html">Movie Review</a></li>
             <li><a href="w1d4flexandgrid/flex.html">flex and grid</a></li>
-            <li><a href="lab2/aboutme.html">Movie review PHP</a></li>
+            <li><a href="w1d5JavaScript/basicjs.html">Basic Js</a></li>
             
         </ul>            
     </section>
