--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <li><a href="w1d3MovieReview/tmnt.html">Movie Review</a></li>
             <li><a href="w1d4flexandgrid/flex.html">flex and grid</a></li>
             <li><a href="w1d5JavaScript/basicjs.html">Basic Js</a></li>
+            <li><a href="w1d6Animation/ascii.html">Animation</a></li>
             
         </ul>            
     </section>
