--- a/w1d6Animation/ascii.html
+++ b/w1d6Animation/ascii.html
@@ -46,10 +46,10 @@
 			</fieldset>
 		</div>
         <div id="validate">
-            <a href="http://validator.w3.org/check/referer">
+            <a href="https://validator.w3.org/nu/?doc=https://elias-teshome.github.io/wap/w1d6Animation/ascii.html">
                 <img src="images/htmlValidatorIcon.png" alt="html validator">
             </a><br>
-            <a href="http://jigsaw.w3.org/css-validator/check/referer">
+            <a href="https://jigsaw.w3.org/css-validator/validator?uri=https://elias-teshome.github.io/wap/w1d6Animation/ascii.html">
                 <img src="images/cssValidatorIcon.png" alt="Valid CSS!"></a><br>
             <a href="http://webster.cs.washington.edu/jslint?referer">
 		<img src="images/JsValidatorIcon.png" alt="JavaScript Lint">
