--- a/w1d6Animation/ascii.html
+++ b/w1d6Animation/ascii.html
@@ -56,6 +56,15 @@
 			</a>
 
 
+
+
+			<div id="w3c">
+				<a href="https://webster.cs.washington.edu/validate-html.php"><img src="https://webster.cs.washington.edu/images/w3c-html.png" alt="Valid HTML5" /></a><br />
+				<a href="https://webster.cs.washington.edu/validate-css.php"><img src="https://webster.cs.washington.edu/images/w3c-css.png" alt="Valid CSS" /></a><br />
+				<a href="https://webster.cs.washington.edu/jslint/?referer"><img src="https://webster.cs.washington.edu/images/w3c-js.png" alt="Valid JS" /></a>
+			</div>
+
+
         </div>
 
     
