functional programing and regular expresion

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
             <li><a href="w1d4flexandgrid/flex.html">flex and grid</a></li>
             <li><a href="w1d5JavaScript/basicjs.html">Basic Js</a></li>
             <li><a href="w1d6Animation/ascii.html">Animation</a></li>
+            <li><a href="w2d1FunctionalProgramming_RegularExpresion/index.html">Functional Programing and Test with mocha</a></li>
+            <li><a href="w2d1FunctionalProgramming_RegularExpresion/reIndex.html">Regular Expresion</a></li>
+            <li><a href="w2d1FunctionalProgramming_RegularExpresion/webForm.html">Form Two</a></li>
             
         </ul>            
     </section>
