--- a/w2d1FunctionalProgramming_RegularExpresion/reIndex.html
+++ b/w2d1FunctionalProgramming_RegularExpresion/reIndex.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Regular expresion</title>
-    <link rel="stylesheet" href="reindex.css">
+    <link rel="stylesheet" href="reIndex.css">
 </head>
 
 <body>
