--- a/w2d1FunctionalProgramming_RegularExpresion/reIndex.html
+++ b/w2d1FunctionalProgramming_RegularExpresion/reIndex.html
@@ -13,13 +13,14 @@
 
         <label>Email address</label>
         <input type="text" placeholder="Enter email">
-        <p>We'll never share your email with anyone else.</p>
-        <label>Another input</label>
+       
+        <label>URL</label>
         <input type="text" pattern="https?://.+" title="Please enter a URL" />
         <label>Password</label>
         <input type="password" placeholder="Password" required minlength="10" pattern="(?=.*[a-z]+)(?=.*[A-Z]+)(?=.*[0-9]+).*"
-        " title="Must contain at least one number and one uppercase and
-        lowercase letter, and at least 10 or more charachter>
+         title="Must contain at least one number and one uppercase and
+        lowercase letter, and at least 10 or more charachter"/>
+
         <label><input type="checkbox"> Check me out</label>
         <div><input type="submit" value="Submit"></div>
 
