--- a/w2d1FunctionalProgramming_RegularExpresion/index.html
+++ b/w2d1FunctionalProgramming_RegularExpresion/index.html
@@ -10,6 +10,7 @@
      <script src="https://cdnjs.cloudflare.com/ajax/libs/chai/3.5.0/chai.js"></script>
     <script src="FunctionalPrograming.js"></script>
     <script src="test.js"></script>
+    <script src="quize.js"></script>
 </head>
 <body>
     
