--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             <li><a href="w2d1FunctionalProgramming_RegularExpresion/index.html">Functional Programing and Test with mocha</a></li>
             <li><a href="w2d1FunctionalProgramming_RegularExpresion/reIndex.html">Regular Expresion</a></li>
             <li><a href="w2d1FunctionalProgramming_RegularExpresion/webForm.html">Form Two</a></li>
+            <li><a href="w2d4Inheritance/index.html">Inheritance</a></li>
             
         </ul>            
     </section>
