--- a/w2d4Inheritance/index.html
+++ b/w2d4Inheritance/index.html
@@ -7,8 +7,8 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/mocha/3.2.0/mocha.js"></script>
         <!-- add chai -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/chai/3.5.0/chai.js"></script>
-        <script src="w2d4Inheritance/inheritance.js"></script>
-        <script src="w2d4Inheritance/test.js"></script>
+        <script src="inheritanc.js"></script>
+        <script src="test.js"></script>
     </head>
     <body>
         <div id="mocha">
