--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             <li><a href="w2d1FunctionalProgramming_RegularExpresion/reIndex.html">Regular Expresion</a></li>
             <li><a href="w2d1FunctionalProgramming_RegularExpresion/webForm.html">Form Two</a></li>
             <li><a href="w2d4Inheritance/index.html">Inheritance</a></li>
+            <li><a href="w3d1Class/index.html">Class</a></li>
             
         </ul>            
     </section>
