--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             <li><a href="w2d1FunctionalProgramming_RegularExpresion/webForm.html">Form Two</a></li>
             <li><a href="w2d4Inheritance/index.html">Inheritance</a></li>
             <li><a href="w3d1Class/index.html">Class</a></li>
+            <li><a href="w3d2Jquiers/index.html">jquery</a></li>
             
         </ul>            
     </section>
