--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             <li><a href="w2d4Inheritance/index.html">Inheritance</a></li>
             <li><a href="w3d1Class/index.html">Class</a></li>
             <li><a href="w3d2Jquiers/index.html">jquery</a></li>
+            <li><a href="w3d3Maze/maze.html">Maze</a></li>
             
         </ul>            
     </section>
